--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body{
+  padding: 20px;
+}
+
+.discussion {
+  border-left: 10px solid #F4F4F4;
+  padding: 10px;
+  margin: 20px;
+
+}
