--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,6 +1,16 @@
-<h1>Questions#answer</h1>
-<p>Find me in app/views/questions/answer.html.erb</p>
+<h1>Stupid Coaching</h1>
+<div class="discussion">
+  <%= params[:question] %>
+  <p>-You</p>
+</div>
 
+<div class="discussion">
+<p> <%= @answer %> </p>
+<p>-Your coach</p>
+
+</div>
+
+<%= link_to "Ask a new question", ask_path %>
 
 
 
