--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,9 +1,8 @@
-<h1>Questions#ask</h1>
-<p>Find me in app/views/questions/ask.html.erb</p>
+<h1>Do you need help ?</h1>
 
 <form action="/answer" method="get" >
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
+  <input type="text" class="input" name="question">
+  <input type="submit" class="btn" value="Ask!">
 </form>
 
 
